<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondpagebackclr"
    tools:context=".AddbooksActivity">


    <TextView

        android:id="@+id/EStxt1"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="29dp"
        android:text="@string/edittext"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/upt1"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_below="@+id/EStxt1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="29dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/upt"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/upt2"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_below="@+id/upt1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="14dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/upt3"

        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/upt4"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_below="@+id/upt2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="14dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/upt5"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/upt5"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_below="@+id/upt4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/upt6"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/editbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upt5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="269dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="52dp"
        android:text="@string/editsave" />


</RelativeLayout>