<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/vtext4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vtext4"
            android:textColor="@color/vtext4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vtext5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vtext5"
            android:textColor="@color/vtext5"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/vtext6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="  Quantity:"
            android:textColor="@color/vtext6"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vtext8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vtext8"
            android:textColor="@color/vtext8"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/updatebtn"
                tools:ignore="MissingConstraints"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/updatebtn"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/deletebtn"
                app:layout_constraintHorizontal_bias="0.946"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/deletebtn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="14dp"
                android:text="@string/deletebtn"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>