<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondpagebackclr"
    tools:context=".AddbooksActivity">


    <TextView

        android:id="@+id/EStxt1"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="29dp"
        android:text="@string/stxt1"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText

        android:id="@+id/Etxt22"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_below="@+id/EStxt1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/Etxt1"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <EditText

        android:id="@+id/Etxt33"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_below="@+id/Etxt22"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/Etxt4"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/Etxt44"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_below="@+id/Etxt33"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Etxt2"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/Etxt55"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_below="@+id/Etxt44"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/Etxt3"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/sbtn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Etxt55"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="39dp"
        android:text="@string/savebtn" />


</RelativeLayout>